samples/_failures_safe/1761541846_b5f2cd_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_f8eb5b42.c: In function ‘main’:
./samples/SAFE/__tmp_f8eb5b42.c:143:16: error: missing terminating " character
  143 |         printf("
      |                ^
./samples/SAFE/__tmp_f8eb5b42.c:143:9: error: expected expression at end of input
  143 |         printf("
      |         ^~~~~~
./samples/SAFE/__tmp_f8eb5b42.c:143:9: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_f8eb5b42.c:143:9: error: expected declaration or statement at end of input
